# dota2-friend

./: .prettierignore  .prettierrc.js  .releaserc.json  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
public/: site.webmanifest
src/: app.styles.scss  app.tsx  main.tsx  routeTree.gen.ts  router.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs  utils.rs
src/components/CreepsPullingWidget/: index.tsx  styles.module.scss
src/components/GameModeLayout/: index.tsx
src/components/NotificationLayoutSettings/: index.tsx  styles.module.scss  windowSetup.ts
src/components/Onboarding/: index.tsx  styles.module.scss
src/components/Settings/: index.tsx  styles.module.scss
src/components/StackCampWidget/: index.tsx
src/components/WidgetContainer/: index.tsx  styles.module.scss
src/components/WisdomRuneWidget/: index.tsx
src/core/: game.ts  gsiParser.ts  gsiStructure.ts  heroes.ts  map.ts
src/core/plugins/: creepsPulling.ts  hero.ts  stackCamp.ts  wisdomRune.ts
src/pages/GameMode/: index.tsx  windowSetup.ts
src/pages/NotificationLayoutSettings/: index.tsx  styles.module.scss  windowSetup.ts
src/pages/Onboarding/: styles.module.scss  windowSetup.ts
src/pages/Settings/: styles.module.scss  windowSetup.ts
src/routes/: __root.tsx  index.tsx  notification-layout-settings.tsx  onboarding.tsx  settings.tsx
src/store/: app.ts  widgets.ts
src/tauriSettings/: tray.ts  window.ts
src/utils/: beforeLoadGuard.ts  onboardingGuard.ts  pipe.ts  soundQueue.ts  updater.ts  useTimeBasedAction.ts  withTauri.ts  writeGSIFile.ts
